# VoxelRT

./: .gitattributes  .gitignore  README.md  index.html  package.json
.github/workflows/: check.yml
VoxelBench/: Makefile  README.md  bench  bench_accel
VoxelBench/knowledge/: pipeline-notes.md  rnd-log.md  sota-survey.md
VoxelBench/pipeline/: accel.cpp  accel.h  accel2.cpp  accel2.h  bench_accel.cpp  core.cpp  core.h  dbg2.cpp  dbg3.cpp  dbg_emshadow.cpp  dbg_super.cpp  dbg_super2.cpp  dbg_super3.cpp  dbg_tmp.cpp  dbgcam.cpp  harness.cpp  metrics.h  scenes.h  scenes_city.cpp  scenes_town.cpp  technique.h
VoxelBench/prior_work/: FaceCache-GI_report.md  analyze.py  bench.cpp  results.csv
VoxelBench/results/: accel.csv  accel_bunker.csv  accel_cavern.csv  accel_city.csv  accel_meta.csv  accel_meta_bunker.csv  accel_meta_cavern.csv  accel_meta_town.csv  (+43 more)
docs/: BIASMAP.md  EXPERIMENT_TEMPLATE.md  PLAN.md  PROFILING.md  RESEARCH_LOOP.md  RESULTS.md  S64.md  S64OPT.md  SCENES.md  STATUS.md  THROUGHPUT.md  WORLDGI.md
native/: Cargo.toml  profile-s64.ps1
native/shaders/: bench.wgsl  brickmap_build.wgsl  brickmap_trace.wgsl  gen.wgsl  s64_build.wgsl  s64_trace.wgsl  s64_trace_stackless.wgsl  s64_trace_stackless_opt.wgsl  scan.wgsl  source.wgsl
native/src/: main.rs  s64.rs  verify.rs
src/: camera.js  main.js  math.js  pairing.js  scene.js
test/: analyze.mjs  bench.mjs  biasmap.mjs  check.mjs  claim-manifest.mjs  claim-manifest.test.mjs  correctness-manifest.mjs  dump-scene.mjs  gpu-launch.mjs  metrics.py  screenshot.mjs  worldgi-check.mjs  worldgi-return.mjs
(+1447 files in other folders)
