[package]
name = "voxelrt-native"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.1", features = ["derive"] }
naga = { version = "30.0.0", features = ["wgsl-in"] }
png = "0.18.1"
pollster = "1.0.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
wgpu = "30.0.0"
